cmake_minimum_required(VERSION 3.14)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(THREADS_PREFER_PTHREAD_FLAG TRUE)

#Definitions
set(CMAKE_PROJECT_NAME Raylib-CPP)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
set(CMAKE_BUILD_TYPE RELEASE)

set(VERSION_MAJOR 0)
set(VERSION_MINOR 1)
set(VERSION_PATCH 0)
set(VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})

#Set project parameters
project(
    ${CMAKE_PROJECT_NAME}
    VERSION ${VERSION}
    DESCRIPTION "Raylib CPP"
    LANGUAGES CXX)

#Set parameters
if (WIN32)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /DNOGDI")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /DNOUSER")
endif()

# Set Module path
set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})

#Include packages
find_package(raylib REQUIRED)

#Add src
add_subdirectory(src)